--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
   font_awesome_flutter: ^9.2.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
