--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.2
   font_awesome_flutter: ^9.2.0
   uuid: ^3.0.6
+  sqflite: ^2.0.2
 
 dev_dependencies:
   flutter_test:
