calculator added to the add transaction screen

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.wallet_app">
    <application
-        android:label="My Wallet"
+        android:label="Smart Wallet"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
