--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   uuid: ^3.0.6
   sqflite: ^2.0.2
   shared_preferences: ^2.0.13
+  loading: ^1.0.2
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
