--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,11 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# my custom git ingnore lines
+/backups
+/plans
+/lib/tests
+
+NOTES.md
+time line.md
