--- a/.gitignore
+++ b/.gitignore
@@ -46,9 +46,9 @@ app.*.map.json
 /android/app/release
 
 # my custom git ingnore lines
-/backups
-/plans
-/lib/tests
+/backups/
+/plans/
+/lib/tests/
 
 NOTES.md
 time line.md
