--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.0.13
   loading: ^1.0.2
   flutter_spinkit: ^5.1.0
+  awesome_dialog: ^2.1.3
 
 dev_dependencies:
   flutter_test:
