--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   loading: ^1.0.2
   flutter_spinkit: ^5.1.0
   awesome_dialog: ^2.1.3
+  syncfusion_flutter_charts: ^19.4.56
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
