--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   awesome_dialog: ^2.1.3
   syncfusion_flutter_charts: ^19.4.56
   intl: ^0.17.0
+  flutter_svg: ^1.0.3
 
 
 dev_dependencies:
