--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   syncfusion_flutter_charts: ^19.4.56
   intl: ^0.17.0
   flutter_svg: ^1.0.3
+  flutter_phoenix: ^1.0.0
 
 
 dev_dependencies:
