--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   reorderable_grid_view: ^2.2.2
   flutter_reorderable_grid_view: ^2.0.3
   drag_and_drop_gridview: ^1.0.8
+  firebase_auth: ^3.3.13
+  google_sign_in: ^5.3.0
 
 
 dev_dependencies:
