--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   drag_and_drop_gridview: ^1.0.8
   firebase_auth: ^3.3.13
   google_sign_in: ^5.3.0
+  firebase_core: ^1.14.0
+  cloud_firestore: ^3.1.11
 
 
 dev_dependencies:
