--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   google_sign_in: ^5.3.0
   firebase_core: ^1.14.0
   cloud_firestore: ^3.1.11
+  flutter_downloader: ^1.7.3
+  path_provider: ^2.0.9
+  http: ^0.13.4
+  dio: ^4.0.6
 
 
 dev_dependencies:
