--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   dio: ^4.0.6
   logger: ^1.1.0
   syncfusion_flutter_datepicker: ^19.4.56
+  firebase_storage: ^10.2.14
+  permission_handler: ^9.2.0
 
 
 dev_dependencies:
