--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   firebase_storage: ^10.2.14
   permission_handler: ^9.2.0
   open_file: ^3.2.1
+  flutter_staggered_grid_view: ^0.6.1
 
 
 dev_dependencies:
