before making the active profile id to be a user pref

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   google_sign_in: ^5.3.0
   firebase_core: ^1.14.0
   cloud_firestore: ^3.1.11
+  flutter_downloader: ^1.7.3
   path_provider: ^2.0.9
   http: ^0.13.4
   dio: ^4.0.6
@@ -56,6 +57,7 @@ dependencies:
   firebase_storage: ^10.2.14
   permission_handler: ^9.2.0
   open_file: ^3.2.1
+  flutter_staggered_grid_view: ^0.6.1
 
 
 dev_dependencies:
