--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.2
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: '>=2.16.2 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -44,21 +44,24 @@ dependencies:
   reorderable_grid_view: ^2.2.2
   flutter_reorderable_grid_view: ^2.0.3
   drag_and_drop_gridview: ^1.0.8
-  firebase_auth: ^3.3.13
-  google_sign_in: ^5.3.0
-  firebase_core: ^1.14.0
-  cloud_firestore: ^3.1.11
-  flutter_downloader: ^1.7.3
+  firebase_auth: ^4.3.0
+  google_sign_in: ^6.0.2
+  firebase_core: ^2.8.0
+  cloud_firestore: ^4.4.5
+  # flutter_downloader: ^1.7.3
   path_provider: ^2.0.9
   http: ^0.13.4
   dio: ^4.0.6
   logger: ^1.1.0
   syncfusion_flutter_datepicker: ^19.4.56
-  firebase_storage: ^10.2.14
+  firebase_storage: ^11.0.16
   permission_handler: ^9.2.0
   open_file: ^3.2.1
   flutter_staggered_grid_view: ^0.6.1
-
+  flutter_reorderable_list: ^1.2.0
+  change_app_package_name: ^1.1.0
+  firebase_crashlytics: ^3.0.17
+  firebase_performance: ^0.9.0+16
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +79,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
