--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2
+version: 1.0.3+3
 
 environment:
   sdk: '>=2.16.2 <3.0.0'
@@ -31,33 +31,30 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
-  font_awesome_flutter: ^9.2.0
+  font_awesome_flutter: ^10.5.0
   uuid: ^3.0.6
   sqflite: ^2.0.2
   shared_preferences: ^2.0.13
-  loading: ^1.0.2
   flutter_spinkit: ^5.1.0
-  awesome_dialog: ^2.1.3
-  syncfusion_flutter_charts: ^19.4.56
-  intl: ^0.17.0
-  flutter_svg: ^1.0.3
+  awesome_dialog: ^3.1.0
+  syncfusion_flutter_charts: ^22.2.10
+  intl: ^0.18.1
+  flutter_svg: ^2.0.7
   reorderable_grid_view: ^2.2.2
-  flutter_reorderable_grid_view: ^2.0.3
-  drag_and_drop_gridview: ^1.0.8
+  flutter_reorderable_grid_view: ^4.0.0
   firebase_auth: ^4.3.0
   google_sign_in: ^6.0.2
   firebase_core: ^2.8.0
   cloud_firestore: ^4.4.5
-  # flutter_downloader: ^1.7.3
   path_provider: ^2.0.9
-  http: ^0.13.4
-  dio: ^4.0.6
-  logger: ^1.1.0
-  syncfusion_flutter_datepicker: ^19.4.56
+  http: ^1.1.0
+  dio: ^5.3.2
+  logger: ^2.0.1
+  syncfusion_flutter_datepicker: ^22.2.10
   firebase_storage: ^11.0.16
-  permission_handler: ^9.2.0
+  permission_handler: ^10.4.3
   open_file: ^3.2.1
-  flutter_staggered_grid_view: ^0.6.1
+  flutter_staggered_grid_view: ^0.7.0
   flutter_reorderable_list: ^1.2.0
   change_app_package_name: ^1.1.0
   firebase_crashlytics: ^3.0.17
@@ -72,7 +69,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
